@@ -3,6 +3,8 @@
 	* src/Makevars (PKG_CPPFLAGS): Add -DBOOST_NO_AUTO_PTR for quieter build
 
 	* src/init.c: Added, based on pnrrs.r plus post-processing for Modules
+	* R/RcppExports.R: Regenerated
+	* src/RcppExports.cpp: Idem
 
 2018-12-23  Dirk Eddelbuettel  <edd@debian.org>
 
